kubernetes/deployments/ingress/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - argocd.elrosvirtual.co.uk
    secretName: argocd-app-tls
  rules:
  - host: argocd.elrosvirtual.co.uk
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
