kubernetes/deployments/ingress/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-server-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - jenkins.elrosvirtual.co.uk
      secretName: jenkins-app-tls
  rules:
  - host: jenkins.elrosvirtual.co.uk
    http:
      paths:
      - backend:
          serviceName: ci-jenkins
          servicePort: http
