kubernetes/deployments/ingress/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-server-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: vault.elrosvirtual.co.uk
    http:
      paths:
      - backend:
          serviceName: vault
          servicePort: http
